--- a/contents.tex
+++ b/contents.tex
@@ -132,7 +132,7 @@ $\nabla$             & Nabla-Operator                                           
 $p$                  & Anzahl paralleler Prozesse                                          \\
 $p$                  & Druck                                                               \\
 $p_\text{max,1}$     & Obere Schranke für $p$ für Simulationsräume                         \\
-$p_\text{max,2}$     & Obere Schranke für $p$ für große Simulationsäume                    \\
+$p_\text{max,2}$     & Obere Schranke für $p$ für große Simulationsräume                   \\
 $r_c$                & Cutoff-Radius eines Kraftfeldes                                     \\
 $r_d$                & Umkugel-Radius eines Delaunay-Simplexes                             \\
 $\rho_\text{worker}$ & Relative Workerdichte auf der Oberfläche des Simulationsraumes      \\
