--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -140,7 +140,7 @@ Sie bilden sich im Verlauf der Simulation als kraterförmige Vertiefungen auf de
 
 Betrachtungen der MD-Simulationen für die mit der Kraterbildung verbundenen Ereignisse zeigen, dass bei Ankunft des Gasatomes seine kinetische Energie fast vollständig an ein anderes Teilchen übertragen wird, das dadurch aus der Oberfläche geschlagen wird.
 An den betroffenen Abscheidungsorten liegen glatte, perfekt kristalline Oberflächen vor, die sich auch im späteren Simulationsverlauf mit einer geringen Wahrscheinlichkeit bilden können.
-Untersuchungen des Einflusses der Teilchenenergie auf den Sputter-Prozess\cite{zhou_atomistic_1998} haben für glatte Oberflächen eine geringere Wahrscheinlichkeit des Energieaustauches gezeigt als für unebene Oberflächen, doch wurden bei diesen Simulationen Energieminimierungen durchgeführt.
+Untersuchungen des Einflusses der Teilchenenergie auf den Sputter-Prozess\cite{zhou_atomistic_1998} haben für glatte Oberflächen eine geringere Wahrscheinlichkeit des Energieaustausches gezeigt als für unebene Oberflächen, doch wurden bei diesen Simulationen Energieminimierungen durchgeführt.
 Die Kraterbildung sollte so eigentlich von einer atomaren Stufe ausgehen, doch wird die Energie in Parsivald-Simulationen bei unebenen Oberflächen scheinbar besser auf die Oberflächenatome aufgeteilt.
 
 Parsivald kann mit herausgeschlagenen Atomen in der aktuellen Version nicht umgehen, weshalb das Ereignis als fehlgeschlagen markiert wird und in den Abbruchraten (Abbildung~\ref{fig:copperworkerdensity-a}) erkennbar sind, die das Verhältnis von fehlgeschlagenen zu ausgewählten Ereignissen beschreiben.
