--- a/forcefields.tex
+++ b/forcefields.tex
@@ -108,11 +108,11 @@ Darüber hinaus werden einige Terme der Energiesumme in der Nähe des Cutoff-Abs
   \end{tabularx}
 \end{table}
 
-Das ReaxFF-Potential wurde ursprünglich für Reaktionen von organischen Molekülen entwickelt\cite{van_duin_reaxff:_2001}, doch hat es sich als vielseitig genug herausgestellt, auch eine Vielzahl anderer Materialien wie Kristalle und nichtorganische Verbindungen simulieren zu können\todo{Ref}.
+Das ReaxFF-Potential wurde ursprünglich für Reaktionen von organischen Molekülen entwickelt\cite{van_duin_reaxff:_2001}, doch hat es sich als vielseitig genug herausgestellt, auch eine Vielzahl anderer Materialien wie Kristalle und nichtorganische Verbindungen simulieren zu können\cite{kulkarni_oxygen_2013,narayanan_reactive_2012,zhang_carbon_2009}.
 Die einzige Abhängigkeit besteht zum Trainingssatz, also den Test-Strukturen, an deren Werte die Parametrisierung des Reax-Kraftfeldes angepasst wurde.
 So kann die Parametrisierung in der Regel nur die Strukturen und Materialien zuverlässig wiedergeben, für die sie ursprünglich erstellt wurde.
 Für erweiterte Anwendungen ist in der Regel eine aufwendige Anpassung der Parametersätze mittels geeigneter Trainingsstrukturen erforderlich.
 
-In den letzten fünf Jahren haben Reactive Force Fields jedoch an Aufmerksamkeit gewonnen, so dass die Zahl verfügbarer spezialisierter Parametrisierungen stetig zunimmt\todo{Ref}.
+In den letzten fünf Jahren haben reaktive Kraftfelder jedoch an Aufmerksamkeit gewonnen, so dass die Zahl verfügbarer spezialisierter Parametrisierungen stetig zunimmt.
 Es gibt auch Bestrebungen, sich ergänzende ReaxFF-Parametrisierungen zu kombinieren und somit mit einer Parametrisierung eine große Zahl von Zielsystemen betrachten zu können.
 Besonders in kommerzieller MD-Software\cite{biovia_materials_2014} wird so versucht, dem Nutzer ein umfassendes Paket für die Simulation beliebiger Strukturen zu präsentieren, ohne ihm aber die Grenzen der Vorhersagekraft des Parametersatzes erkenntlich zu machen.
