--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -7,7 +7,7 @@
 
 \newif\iftestonly
 \testonlyfalse
-\testonlytrue
+%% \testonlytrue
 
 \documentclass[
 draft,
@@ -68,14 +68,14 @@ BCOR9mm,
 
 \end{document}
 
-\todoline{figures und tables positionieren!}
-\todoline{figures und tables: captions überarbeiten}
-\todoline{Erste Absätze: Keine Einrückung.}
+\todoline{Einleitung und Zusammenfassung nochmal lesen}
 \todoline{Mit Vortrag abgleichen}
-\todoline{Inhalte aus dem Anhang in die Arbeit ziehen, insbesondere für silicon/silica}
+\todoline{figures und tables: captions überarbeiten}
+\todoline{Tabellen-Hintergründe überschreiben die horizontalen und vertikalen Linien. Das ist ganz große Kacke}
+\todoline{Das wird Arbeit: Alle Referenzen durchgehen und vergleiche, ob ich sie im richtigen Kontext eingebunden habe!}
+
+\todoline{figures und tables positionieren!}
+\todoline{Erste Absätze: Keine Einrückung.}
 \todoline{Kein Umbruch zwischen Bezeichnungen und inline-Formeln}
 \todoline{Kein Umbruch in Formel-SI-Kombinationen}
 \todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
-\todoline{Das wird Arbeit: Alle Referenzen durchgehen und vergleiche, ob ich sie im richtigen Kontext eingebunden habe!}
-\todoline{Wirkt alles immer noch so zusammen gestückelt?}
-\todoline{Tabellen-Hintergründe überschreiben die horizontalen und vertikalen Linien. Das ist ganz große Kacke}
