--- a/multilayer.tex
+++ b/multilayer.tex
@@ -73,17 +73,12 @@ Bei den LAMMPS-Simulationen wurde versehentlich eine leicht geringere Zahl von A
   \captionsetup[subfigure]{singlelinecheck=false}
 
   \hspace{1.5em}
-  \begin{subfigure}[c]{0.7cm}
-    \includegraphics[width=\textwidth]{Cu}
-  \end{subfigure}
-  \begin{subfigure}[c]{0.7cm}
-    \ce{Cu}
-  \end{subfigure}
-  \begin{subfigure}[c]{0.7cm}
-    \includegraphics[width=\textwidth]{Ni}
-  \end{subfigure}
-  \begin{subfigure}[c]{0.7cm}
-    \ce{Ni}
+  \begin{subfigure}[c]{3.5cm}
+    \begin{framed}
+      \chemlegendce{Cu}
+      \hspace{0.5em}
+      \chemlegendce{Ni}
+    \end{framed}
   \end{subfigure}
 
   \def\subfigwidth{7cm}
