--- a/settings.tex
+++ b/settings.tex
@@ -93,3 +93,10 @@
 
 \newcommand{\qqquad}[0]{\qquad\quad}
 \newcommand{\pot}[1]{\texttt{#1}}
+
+\newcommand{\chemlegend}[1]{\begin{minipage}[c]{0.7cm}\includegraphics[width=\textwidth]{#1}\end{minipage}}
+\newcommand{\chemlegendce}[1]{\chemlegend{#1}\ce{#1}}
+
+% asd 
+%% \renewcommand{\oddrowcolors}{}
+%% \renewcommand{\evenrowcolors}{}
