--- a/test.tex
+++ b/test.tex
@@ -1,15 +1,12 @@
-\input{aluminaald}
-\input{multilayer}
-
 \begin{table}[H]
   %% \oddrowcolors
   \begin{tabularx}{0.8\textwidth}{|XXX|}
     \hline
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
     \hline
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
     \hline
   \end{tabularx}
 \end{table}
@@ -18,11 +15,11 @@
   \oddrowcolors
   \begin{tabularx}{0.8\textwidth}{|XXX|}
     \hline
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
     \hline
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
     \hline
   \end{tabularx}
 \end{table}
@@ -31,11 +28,11 @@
   \evenrowcolors
   \begin{tabularx}{0.8\textwidth}{|XXX|}
     \hline
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
     \hline
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
     \hline
   \end{tabularx}
 \end{table}
@@ -45,11 +42,11 @@
   \oddrowcolors
   \begin{tabularx}{0.8\textwidth}{|XXX|}
     \hline
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
     \hline
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
-    asd & dsa & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
+    sdf & fds & sdf \\
     \hline
   \end{tabularx}
 \end{table}
